更新 ARMv8-OpenWrt.yml

--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -45,10 +45,10 @@ on:
       kernel_version:
         description: "Select kernel version"
         required: false
-        default: "5.4.228_5.10.161_5.15.100_6.1.8"
+        default: "5.4.228_5.10.161_5.15.100_6.1.8_6.6.18"
         type: choice
         options:
-          - 5.4.228_5.10.161_5.15.100_6.1.8
+          - 5.4.228_5.10.161_5.15.100_6.1.8_6.6.18
           - 5.4.228_5.10.161
           - 5.4.228_5.15.100
           - 5.10.161_5.15.100
