--- a/x86/x86-docker.config
+++ b/x86/x86-docker.config
@@ -7663,7 +7663,7 @@ CONFIG_PACKAGE_docker=y
 CONFIG_PACKAGE_dockerd=y
 # CONFIG_DOCKER_CHECK_CONFIG is not set
 CONFIG_DOCKER_CGROUP_OPTIONS=y
-CONFIG_DOCKER_OPTIONAL_FEATURES=y
+# CONFIG_DOCKER_OPTIONAL_FEATURES is not set
 
 #
 # Network
