--- a/.github/workflows/Build_X86_64.yml
+++ b/.github/workflows/Build_X86_64.yml
@@ -966,9 +966,13 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P2_SH
         
         sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_6_0=y/g' .config
+
+        sed -i '/CONFIG_PACKAGE_kmod-phy-aquantia=y/d' .config
         
         sed -i 's/KERNEL_PATCHVER:=*.*/KERNEL_PATCHVER:=6.1/g' target/linux/x86/Makefile
         
+        sed -i 's/KERNEL_TESTING_PATCHVER:=*.*/KERNEL_TESTING_PATCHVER:=6.1/g' target/linux/x86/Makefile
+
         sed -i 's/KERNEL_TESTING_PATCHVER:=*.*/KERNEL_TESTING_PATCHVER:=6.1/g' target/linux/x86/Makefile
 
     - name: SSH connection to Actions
