--- a/.github/workflows/Build_X86_64[Docker].yml
+++ b/.github/workflows/Build_X86_64[Docker].yml
@@ -189,6 +189,8 @@ jobs:
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
+        
+        rm -rf package/kernel/mt76
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
