--- a/.github/workflows/Build_X86_64[Docker].yml
+++ b/.github/workflows/Build_X86_64[Docker].yml
@@ -462,6 +462,8 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
 
+        rm -rf package/kernel/mt76
+
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
@@ -476,6 +478,8 @@ jobs:
         $GITHUB_WORKSPACE/$DIY_P2_SH
 
         sed -i 's/CONFIG_LINUX.*/CONFIG_LINUX_5_15=y/g' .config
+
+        sed -i 's/CONFIG_TARGET_ROOTFS_PARTSIZE.*/CONFIG_TARGET_ROOTFS_PARTSIZE=5120/g' .config
 
         sed -i '/CONFIG_PACKAGE_kmod-mt76-connac=y/d' .config
 
