--- a/x86/X86-LuciApp.config
+++ b/x86/X86-LuciApp.config
@@ -7,6 +7,10 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=968
 
+# Root filesystem images
+CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_EFI_IMAGES=y
+
 # Firmware Type
 # CONFIG_GRUB_CONSOLE is not set
 CONFIG_GRUB_IMAGES=y
