--- a/x86/X86-LuciApp.config
+++ b/x86/X86-LuciApp.config
@@ -10,6 +10,7 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=968
 # Root filesystem images
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_GRUB_CONSOLE=y
 
 # Firmware Type
 # CONFIG_GRUB_CONSOLE is not set
