--- a/.github/workflows/x86_64_LuciApp.yml
+++ b/.github/workflows/x86_64_LuciApp.yml
@@ -221,7 +221,7 @@ jobs:
         tag: ${{ env.TAG }}168_${{ env.KERNEL }}
         token: ${{ secrets.GH_TOKEN }}
         body: |
-          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }} 固件
+          - ⭐️此为 ${{ env.FILE_NAME }}_${{ env.KERNEL }}[测试] 固件
           - 🔴默认IP：192.168.8.3 默认密码：无密码
           - 当前使用版本:【编译前的最后一次[➦主源码](https://github.com/coolsnowwolf/lede)更新记录】
           - ★ 感谢源码作者无私分享！
