--- a/x86/X86-LuciApp.config
+++ b/x86/X86-LuciApp.config
@@ -7,24 +7,20 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=968
 
-# Root filesystem images
-# CONFIG_TARGET_ROOTFS_EXT4FS is not set
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
-CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=1024
-CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
-CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
+# Firmware Type
+# CONFIG_GRUB_CONSOLE is not set
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
-# CONFIG_GRUB_CONSOLE is not set
-# CONFIG_GRUB_FLOWCONTROL is not set
-CONFIG_GRUB_BOOTOPTS=""
-# CONFIG_ISO_IMAGES is not set
-# CONFIG_QCOW2_IMAGES is not set
-# CONFIG_VDI_IMAGES is not set
-# CONFIG_VMDK_IMAGES is not set
-# CONFIG_VHDX_IMAGES is not set
 CONFIG_TARGET_IMAGES_GZIP=y
+# CONFIG_TARGET_ROOTFS_EXT4FS is not set
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
+# CONFIG_VMDK_IMAGES is not set
 
+# Image Builder
+CONFIG_IB=y
+CONFIG_IB_STANDALONE=y
+CONFIG_DEVEL=y
 
 # Ipv6 Support
 CONFIG_PACKAGE_6in4=y
@@ -266,10 +262,15 @@ CONFIG_PACKAGE_usb-modeswitch=y
 # Mobile Network Sharing
 CONFIG_PACKAGE_libimobiledevice-utils=y
 CONFIG_PACKAGE_libplist-utils=y
-CONFIG_PACKAGE_libudev-fbsd=y
 CONFIG_PACKAGE_libusbmuxd-utils=y
 CONFIG_PACKAGE_usbmuxd=y
-CONFIG_PACKAGE_smartdns=y
+
+# SDCard Support
+CONFIG_PACKAGE_kmod-sdhci=y
+
+# Shortcut-Fe
+CONFIG_PACKAGE_kmod-shortcut-fe=y
+CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
 
 ## Python
 CONFIG_PACKAGE_python-pip-conf=y
