--- a/x86/x86-LuciApp.config
+++ b/x86/x86-LuciApp.config
@@ -1,7 +1,8 @@
-
+# Image Options
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=968
 
+# Firmware Type
 # CONFIG_GRUB_CONSOLE is not set
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
@@ -11,12 +12,20 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
 # CONFIG_VMDK_IMAGES is not set
 
+# Image Builder
+CONFIG_IB=y
+CONFIG_IB_STANDALONE=y
+CONFIG_DEVEL=y
+
+# Ipv6 Support
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-extra=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
 
+#============================== LuCI ==============================#
+# Applications
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-app-adblock=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
@@ -139,18 +148,24 @@ CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_smartdns=y
+# end of Applications
 
+# Lang Support
 CONFIG_LUCI_LANG_en=y
 CONFIG_LUCI_LANG_zh-cn=y
 CONFIG_LUCI_LANG_zh-tw=y
 
+# Themes
 CONFIG_PACKAGE_luci-theme-argon=y
 # CONFIG_PACKAGE_luci-theme-argon-mod is not set
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-design=y
 # CONFIG_PACKAGE_luci-theme-material is not set
 # CONFIG_PACKAGE_luci-theme-netgear is not set
+# end of Themes
 
+#============================== end of LuCI ==============================#
+## File System Drivers
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-btrfs=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
@@ -176,12 +191,16 @@ CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-fs-xfs=y
 CONFIG_PACKAGE_kmod-fuse=y
 
+## I2C Drivers
 CONFIG_PACKAGE_kmod-i2c-core=y
 
+### Dependence for OpenClash
 CONFIG_PACKAGE_kmod-inet-diag=y
 
+### USB Audio 
 CONFIG_PACKAGE_kmod-usb-audio=y
 
+### USB Net Drivers
 CONFIG_PACKAGE_kmod-usb-net=y
 CONFIG_PACKAGE_kmod-usb-net-asix=y
 CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
@@ -207,6 +226,7 @@ CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
 CONFIG_PACKAGE_kmod-usb-net-sr9700=y
 CONFIG_PACKAGE_kmod-usb-net2280=y
 
+### USB Storage Drivers
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
 CONFIG_PACKAGE_kmod-usb-printer=y
@@ -218,6 +238,7 @@ CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 
+# 3G/4G Drivers & Utilities
 CONFIG_PACKAGE_comgt-ncm=y
 CONFIG_PACKAGE_comgt=y
 CONFIG_PACKAGE_kmod-mii=y
@@ -233,15 +254,19 @@ CONFIG_PACKAGE_umbim=y
 CONFIG_PACKAGE_uqmi=y
 CONFIG_PACKAGE_usb-modeswitch=y
 
+# Mobile Network Sharing
 CONFIG_PACKAGE_libimobiledevice-utils=y
 CONFIG_PACKAGE_libplist-utils=y
 CONFIG_PACKAGE_libusbmuxd-utils=y
 CONFIG_PACKAGE_usbmuxd=y
 
+# SDCard Support
 CONFIG_PACKAGE_kmod-sdhci=y
 
+# Shortcut-Fe
 CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
 
+## Python
 CONFIG_PACKAGE_python-pip-conf=y
 CONFIG_PACKAGE_python3=y
