--- a/x86/x86-LuciApp.config
+++ b/x86/x86-LuciApp.config
@@ -13,11 +13,8 @@ CONFIG_TARGET_ROOTFS_TARGZ=y
 # CONFIG_VMDK_IMAGES is not set
 
 # Ipv6 Support
-CONFIG_PACKAGE_6in4=y
+CONFIG_IPV6=y
 CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_ip6tables-extra=y
-CONFIG_PACKAGE_ip6tables-mod-nat=y
 
 #============================== LuCI ==============================#
 # Applications
@@ -253,10 +250,6 @@ CONFIG_PACKAGE_usb-modeswitch=y
 # Mobile Network Sharing
 CONFIG_PACKAGE_libimobiledevice-utils=y
 CONFIG_PACKAGE_libplist-utils=y
+CONFIG_PACKAGE_libudev-fbsd=y
 CONFIG_PACKAGE_libusbmuxd-utils=y
 CONFIG_PACKAGE_usbmuxd=y
-CONFIG_PACKAGE_libustream-mbedtls=y
-
-# Shortcut-Fe
-CONFIG_PACKAGE_kmod-shortcut-fe=y
-CONFIG_PACKAGE_kmod-shortcut-fe-cm=y
