--- a/x86/x86-LuciApp.config
+++ b/x86/x86-LuciApp.config
@@ -7,10 +7,15 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=968
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
+# CONFIG_TARGET_ROOTFS_TARGZ is not set
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
 # CONFIG_VMDK_IMAGES is not set
+
+
+# Global build settings
+# CONFIG_JSON_OVERVIEW_IMAGE_INFO is not set
 
 # Ipv6 Support
 CONFIG_IPV6=y
